--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,6 @@
 @charset "UTF-8";
 /*!
-* Start Bootstrap - Landing Page v6.0.5 (https://startbootstrap.com/theme/landing-page)
-* Copyright 2013-2022 Start Bootstrap
-* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-landing-page/blob/master/LICENSE)
-*/
-/*!
- * Bootstrap v5.1.3 (https://getbootstrap.com/)
- * Copyright 2011-2021 The Bootstrap Authors
- * Copyright 2011-2021 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
-:root {
+:root 
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
@@ -7376,7 +7366,7 @@ textarea.form-control-lg {
 }
 
 .mb-5 {
-  margin-bottom: 6rem !important;
+  margin-bottom: 2.5rem !important;
 }
 
 .mb-auto {
